--- a/WebStore.WebUI/Views/Product/List.cshtml
+++ b/WebStore.WebUI/Views/Product/List.cshtml
@@ -1,16 +1,14 @@
-﻿@using WebStore.Domain.Entities;
-@model IEnumerable<Product>
+﻿@model WebStore.WebUI.Models.ProductListViewModel
 
 @{
     ViewBag.Title = "Products";
 }
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
-    <div>
-        <h3>@p.Name</h3>
-        @p.Description
-        <h4>@p.Price.ToString("C")</h4>
-    </div>
+    @Html.Partial("ProductSummary", p)
 }
+<div class="btn-group pull-right">
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+</div>
 
