--- a/WebStore.WebUI/Views/Product/List.cshtml
+++ b/WebStore.WebUI/Views/Product/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.WebUI.Models.ProductListViewModel
+﻿@model WebStore.WebUI.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Products";
@@ -9,6 +9,6 @@
     @Html.Partial("ProductSummary", p)
 }
 <div class="btn-group pull-right">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x, category = Model.CurentCategory }))
 </div>
 
