Completing the Cart

--- a/WebStore.WebUI/Views/Cart/Index.cshtml
+++ b/WebStore.WebUI/Views/Cart/Index.cshtml
@@ -1,9 +1,14 @@
 ﻿@model WebStore.WebUI.Models.CartIndexViewModel
 @{
-    ViewBag.Title = "Sports Store: Your Cart";
+    ViewBag.Title = "WebStore: Your Cart";
 }
+
+<style>
+    #cartTable td { vertical-align: middle; }
+</style>
+
 <h2>Your cart</h2>
-<table class="table">
+<table id="cartTable" class="table">
 <thead>
 <tr>
     <th>Quantity</th>
@@ -21,6 +26,14 @@
         <td class="text-right">
             @((line.Quantity * line.Product.Price).ToString("c"))
         </td>
+        <td>
+            @using (Html.BeginForm("RemoveFromCart", "Cart")) {
+                @Html.Hidden("ProductId", line.Product.ProductId)
+                @Html.HiddenFor(x => x.ReturnUrl)
+                <input class="btn btn-sm btn-warning"
+                       type="submit" value="Remove" />
+            }
+        </td>
     </tr>
 }
     </tbody>
@@ -35,5 +48,6 @@
 </table>
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+    @Html.ActionLink("Checkout now", "Checkout", null, new { @class = "btn btn-primary" })
 </div>
 
